# StellarPledge

./: .gitignore  BACKEND_FIX_GUIDE.md  BLOCKCHAIN_INTEGRATION_COMPLETE.md  CHANGELOG.md  COMPLETE-PACKAGE.md  DEMO-GUIDE.md  DEMO-PRESENTATION.md  DOCUMENTATION_CREATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  MOCK_MODE_GUIDE.md  ORGANIZATION_COMPLETE.md  ORGANIZATION_SUMMARY.md  QUICK-START.txt  README.md  STANDALONE-WALLET-SUMMARY.txt  SYSTEM_STATS.md  TESTING-GUIDE.md  TROUBLESHOOTING.md  WALLET_SETUP_FIX.md  run-demo.sh
.devcontainer/: devcontainer.json
Ref/: Alice.txt  bob.txt  charlie.txt
demo-accounts/: Alice.txt  Bob.txt  Charlie.txt
docs/: COMPLETE-WORKFLOW.md  CONSOLIDATION-SUMMARY.md  IMPLEMENTATION-SUMMARY.md  PROJECT-STATUS.md  QUICK-REFERENCE.md  README.md  STANDALONE-WALLET-IMPLEMENTATION.md  STANDALONE-WALLET-QUICKSTART.md  STANDALONE-WALLET.md
documentation/: FINAL_DELIVERY_SUMMARY.md  README.md  README_OLD.md
documentation/demo/: 3_MINUTE_PITCH.md  COMPLETE_DEMO_GUIDE.md  DEMO_CHANGES.md  DEMO_GUIDE.md  LIVE_DEMO_SCRIPT.md  PRE_DEMO_CHECKLIST.md
documentation/guides/: DEMONSTRATION_QA.md  REAL_FUNDED_ACCOUNTS_GUIDE.md
documentation/technical/: BUG_FIXES.md  CURRENT_STATE_EXPLANATION.md  FRONTEND_ARCHITECTURE.md  REAL_ACCOUNTS_INTEGRATION.md  SMART_CONTRACT_ARCHITECTURE.md  STELLAR_EXPERT_GUIDE.md  SYSTEM_ARCHITECTURE.md  WALLET_BALANCE_GUIDE.md  (+1 more)
frontend/: INTEGRATION-GUIDE.md  app.js  demo.html  demo.js  index.html  package-lock.json  package.json  style.css
smart-contract/: Cargo.toml
smart-contract/src/: lib.rs
(+31 files in other folders)
